--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,40 +1,16 @@
 {
-  "env": {
+    "env": {
         "browser": true,
-        "jquery": true
-                
-  },
-  "extends": "eslint:recommended",
-  "rules": {
-    "indent": [
-      "error",
-      2,
-        {
-          "SwitchCase": 1,
-          "VariableDeclarator": {"var": 2, "let": 2, "const": 3}              
-        }
-      ],
-      "linebreak-style": [
-        "error",
-        "unix"
-                      
-      ],
-      "quotes": [
-        "error",
-        "single"
-                        
-      ],
-      "semi": [
-        "error",
-        "always"
-                          
-      ],
-      "no-console": [
-        "error",
-        { "allow": ["error"]  }
-            
-      ]
-                      
+        "es6": true
+    },
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
+    "rules": {
     }
-
 }
