--- a/.npmrc
+++ b/.npmrc
@@ -1,27 +1,1 @@
-
-module.exports = function (grunt) {
-  grunt.initConfig({
-  csslint: {
-    options: {
-          csslintrc: '.csslintrc'
-          
-    },
-        src: '*.css'
-        
-  },
-  htmlhint: {
-    options: {
-              htmlhintrc: '.htmlhintrc'
-          
-    },
-          src: '*.html'
-                
-  }
-    
-  });
-
-    grunt.loadNpmTasks('grunt-contrib-csslint');
-    grunt.loadNpmTasks('grunt-htmlhint');
-    grunt.registerTask('lint', ['htmlhint', 'csslint']);
-
-};
+package-lock = false
