--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "dependencies": {},
   "devDependencies": {
     "eslint": "^5.15.3",
-    "grunt": "^1.0.3",
+    "grunt": ">=0.4.5",
     "grunt-contrib-csslint": "^2.0.0",
     "grunt-eslint": "^21.0.0",
-    "grunt-htmlhint": "^0.9.13"
+    "grunt-htmlhint": "^0.9.13",
+    "grunt-mocha": "^0.4.12",
+    "mocha": "^6.0.2"
   },
   "scripts": {
-    "test": "grunt lint"
+    "test": "grunt lint && grunt unitTest"
   },
   "repository": {
     "type": "git",
