--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {},
   "devDependencies": {
     "eslint": "^5.15.3",
-    "grunt": ">=0.4.5",
+    "grunt": "^1.0.3",
     "grunt-contrib-csslint": "^2.0.0",
+    "grunt-contrib-htmlmin": "^3.0.0",
+    "grunt-contrib-uglify": "^4.0.0",
     "grunt-eslint": "^21.0.0",
     "grunt-htmlhint": "^0.9.13",
     "grunt-mocha": "^0.4.12",
